Simplified code
- Introduced SuccessMessageTemplates
- Simplified DatamapSource to handle a single param and not all params. A little more functional than before
- Added support for extra mappings (currently only relevant for forge-blueprint)
- Some comment cleanups