@@ -1,10 +1,12 @@
 package com.freifeld.tools.quephaestus.configuration;
 
 import java.nio.file.Path;
+import java.util.Collections;
 import java.util.Map;
 
 public record Blueprint(
 		Map<String, Path> templatePaths,
+		Map<String, String> extraMappings,
 		String moduleName,
 		Path modulePath,
 		QuephaestusConfiguration configuration,
@@ -20,6 +22,12 @@ public record Blueprint(
 			Path rootPath
 	)
 	{
-		this(Map.of(commandParameter, templatePath), moduleName, modulePath, configuration, rootPath);
+		this(
+				Map.of(commandParameter, templatePath),
+				Collections.emptyMap(),
+				moduleName,
+				modulePath,
+				configuration,
+				rootPath);
 	}
 }
